MSS-1566-[Update PLP design]-plp-list-alignment-fixed

--- a/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/components/_common.scss
+++ b/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/components/_common.scss
@@ -31,6 +31,13 @@ h1 {
   font-size: rem(14);
 }
 
+.promotions {
+
+  .promo-msg {
+    color: $light-red;
+  }
+}
+
 @include media-breakpoint-up(md) {
   .heading-one {
     font-family: $font-bold;
