--- a/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/components/_productTiles.scss
+++ b/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/components/_productTiles.scss
@@ -64,11 +64,14 @@
 
         .pdp-link {
             font-size: rem(20);
+            margin-top: rem(10);
+
             a {
                 font-size: rem(20);
                 height: rem(40);
                 letter-spacing: rem(0);
                 font-size: rem(16);
+                font-weight: 500;
                 height: rem(40);
                 overflow: hidden;
                 text-overflow: ellipsis;
@@ -118,9 +121,6 @@
             margin-bottom: rem(10);   
           }
         }
-        .promotions {
-          height: rem(43);
-        }
         .adjust-rating-alignment {
           height: rem(35);
         }
@@ -153,7 +153,6 @@
       font-weight: 500;
       font-family: $font-medium;
       letter-spacing: rem(0);
-      height: rem(44);
       overflow: hidden;
       
       @include media-breakpoint-down(md){
