--- a/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/search.scss
+++ b/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/search.scss
@@ -209,8 +209,6 @@
   margin-top: rem(-1);
 
   @include media-breakpoint-up(xl) {
-    max-width: rem(775);
-    flex: 0 0 rem(775);
     padding: 0;
   }
 }
